--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
             <dependency>
                 <groupId>org.raml</groupId>
                 <artifactId>raml-parser</artifactId>
-                <version>0.8.13</version>
+                <version>0.9-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.googlecode.json-simple</groupId>
